<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CalculatorActivity"
  tools:layout_editor_absoluteY="81dp">
  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
      android:id="@+id/calculatorTextview"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/calculator_title"
      android:textColor="@android:color/holo_red_dark"
      android:textSize="35sp"
      />
    <EditText
      android:id="@+id/number1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/calculator_number_1_hint"
      android:importantForAutofill="no"/>

    <EditText
      android:id="@+id/number2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/calculator_number_2_hint"
      android:importantForAutofill="no"/>
    <TextView
      android:id="@+id/result"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:textColor="#3F51B5"
      android:textSize="50sp"/>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
      <Button
        android:id="@+id/addBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/calculator_plus_btn_text"
        android:textSize="20sp"
        app:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="doAdd"
        />
      <Button
        android:id="@+id/subtractBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:padding="10dp"
        android:text="@string/calculator_minus_btn_text"
        android:textSize="20sp"
        app:backgroundTint="#66BB6A"
        android:onClick="doSubtract"
        />
    </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">
      <Button
        android:id="@+id/multiplyBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/calculator_multiply_btn_text"
        android:textSize="20sp"
        app:backgroundTint="#EC407A"
        android:onClick="doMultiply"
        />
      <Button
        android:id="@+id/divideBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:padding="10dp"
        android:text="@string/calculator_divide_btn_text"
        android:textSize="20sp"
        app:backgroundTint="#29B6F6"
        android:onClick="doDivide"
        />
    </LinearLayout>

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>